Fix test dockerfiles, integrate protobuf properly into the build, enable optimized build in dockerfiles and improved environment handling for local builds

--- a/flavors/benchmark/Dockerfile.build_benchmark
+++ b/flavors/benchmark/Dockerfile.build_benchmark
@@ -8,10 +8,11 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y curl openjdk-8-jdk && \
 RUN mkdir /exaudf_src /exaudf_src/build /exaudf
 COPY src/ /exaudf_src/
 
-ENV CUSTOM_PROTOBUF_BIN /usr/bin/protoc
-ENV CUSTOM_PROTOBUF_PREFIX /usr/lib/x86_64-linux-gnu
+ENV PROTOBUF_BIN=/usr/bin/protoc 
+ENV PROTOBUF_LIBRARY_PREFIX=/usr/lib/x86_64-linux-gnu
+ENV PROTOBUF_INCLUDE_PREFIX=/usr/include/google/protobuf/
 ENV VERBOSE_BUILD "--subcommands --verbose_failures"
 
 RUN cd /exaudf_src/ && \
-	bash build.sh --define benchmark=true //:exaudfclient && \
+	bash build.sh -c opt --define benchmark=true //:exaudfclient && \
 	cp -r -L bazel-bin/* /exaudf
