--- a/flavors/fancyr-EXASOL-6.0.0/Dockerfile.build_fancyr-EXASOL-6.0.0
+++ b/flavors/fancyr-EXASOL-6.0.0/Dockerfile.build_fancyr-EXASOL-6.0.0
@@ -9,10 +9,12 @@ RUN mkdir /exaudf_src /exaudf
 COPY src/ /exaudf_src/
 
 ENV JAVA_HOME /usr/lib/jvm/java-1.8.0-openjdk-amd64
-ENV CUSTOM_PROTOBUF_BIN /usr/bin/protoc
-ENV CUSTOM_PROTOBUF_PREFIX /usr/lib/x86_64-linux-gnu/
+ENV PROTOBUF_BIN=/usr/bin/protoc 
+ENV PROTOBUF_LIBRARY_PREFIX=/usr/lib/x86_64-linux-gnu
+ENV PROTOBUF_INCLUDE_PREFIX=/usr/include/google/protobuf/
+
 #ENV VERBOSE_BUILD "--subcommands --verbose_failures"
 
 RUN cd /exaudf_src && pwd && \
-	bash build.sh --define r=true //:exaudfclient && \
+	bash build.sh -c opt --define r=true //:exaudfclient && \
 	cp -r -L bazel-bin/* /exaudf
