--- a/src/streaming_container/BUILD
+++ b/src/streaming_container/BUILD
@@ -2,6 +2,7 @@ package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "streamingcontainer",
-    srcs = ["streamingcontainer.cc","streamingcontainer.h"],
-    deps = ["//exaudflib:exaudflib"]
+    srcs = ["streamingcontainer.cc","streamingcontainer.h","//exaudflib:header"],
+    hdrs = ["streamingcontainer.h"],
+    deps = ["//exaudflib:exaudflib-deps"]
 )
