--- a/flavors/deprecated/conda/Dockerfile.test_conda
+++ b/flavors/deprecated/conda/Dockerfile.test_conda
@@ -3,7 +3,7 @@ FROM exaudf/release_conda
 RUN mkdir /exasol_emulator
 
 COPY emulator/ /exasol_emulator
-COPY src/zmqcontainer.proto /exasol_emulator
+COPY src/exaudflib/zmqcontainer.proto /exasol_emulator
 
 RUN /opt/conda/bin/conda install -y pyzmq protobuf
 #RUN apt-get -y install vim
