--- a/flavors/fancyr-EXASOL-6.0.0/Dockerfile.test_fancyr-EXASOL-6.0.0
+++ b/flavors/fancyr-EXASOL-6.0.0/Dockerfile.test_fancyr-EXASOL-6.0.0
@@ -3,7 +3,7 @@ FROM exaudf/release_fancyr-exasol-6.0.0
 RUN mkdir /exasol_emulator
 
 COPY emulator/ /exasol_emulator
-COPY src/zmqcontainer.proto /exasol_emulator
+COPY src/exaudflib/zmqcontainer.proto /exasol_emulator
 
 RUN     apt-get -y install python-protobuf python-zmq gdb
 
