--- a/flavors/mini-EXASOL-6.0.0/Dockerfile.build_mini-EXASOL-6.0.0
+++ b/flavors/mini-EXASOL-6.0.0/Dockerfile.build_mini-EXASOL-6.0.0
@@ -10,10 +10,11 @@ COPY src/ /exaudf_src/
 
 ENV PYTHON2_PREFIX /usr 
 ENV PYTHON2_VERSION python2.7
-ENV CUSTOM_PROTOBUF_BIN /usr/bin/protoc
-ENV CUSTOM_PROTOBUF_PREFIX /usr/lib/x86_64-linux-gnu
+ENV PROTOBUF_BIN=/usr/bin/protoc 
+ENV PROTOBUF_LIBRARY_PREFIX=/usr/lib/x86_64-linux-gnu
+ENV PROTOBUF_INCLUDE_PREFIX=/usr/include/google/protobuf/
 #ENV VERBOSE_BUILD "--subcommands --verbose_failures"
 
 RUN cd /exaudf_src/ && \
-	bash build.sh --define python=true //:exaudfclient && \
+	bash build.sh -c opt --define python=true //:exaudfclient && \
 	cp -r -L bazel-bin/* /exaudf
