--- a/flavors/python3-ds-EXASOL-6.0.0/Dockerfile.build_python3-ds-EXASOL-6.0.0
+++ b/flavors/python3-ds-EXASOL-6.0.0/Dockerfile.build_python3-ds-EXASOL-6.0.0
@@ -11,11 +11,12 @@ COPY src/ /exaudf_src/
 ENV JAVA_HOME /usr/lib/jvm/java-1.8.0-openjdk-amd64
 ENV PYTHON3_PREFIX /usr
 ENV PYTHON3_VERSION python3.6
-ENV CUSTOM_PROTOBUF_BIN /usr/local/bin/protoc
-ENV CUSTOM_PROTOBUF_PREFIX /usr/local/lib
+ENV PROTOBUF_BIN=/usr/local/bin/protoc 
+ENV PROTOBUF_LIBRARY_PREFIX=/usr/local/lib/
+ENV PROTOBUF_INCLUDE_PREFIX=/usr/local/include/google/protobuf/
 #ENV VERBOSE_BUILD "--subcommands --verbose_failures"
 
 RUN cd /exaudf_src/ && \
-	bash build.sh --define python=true //:exaudfclient_py3 && \
+	bash build.sh -c opt --define python=true //:exaudfclient_py3 && \
 	mv bazel-bin/exaudfclient_py3 bazel-bin/exaudfclient && \
 	cp -r -L bazel-bin/* /exaudf
