--- a/flavors/standard-EXASOL-6.0.0/Dockerfile.build_standard-EXASOL-6.0.0
+++ b/flavors/standard-EXASOL-6.0.0/Dockerfile.build_standard-EXASOL-6.0.0
@@ -11,11 +11,13 @@ COPY src/ /exaudf_src/
 ENV JAVA_HOME /usr/lib/jvm/java-1.8.0-openjdk-amd64
 ENV PYTHON2_PREFIX /usr 
 ENV PYTHON2_VERSION python2.7
-ENV CUSTOM_PROTOBUF_BIN /usr/bin/protoc
-ENV CUSTOM_PROTOBUF_PREFIX /usr/lib/x86_64-linux-gnu/
+ENV PROTOBUF_BIN=/usr/bin/protoc 
+ENV PROTOBUF_LIBRARY_PREFIX=/usr/lib/x86_64-linux-gnu
+ENV PROTOBUF_INCLUDE_PREFIX=/usr/include/google/protobuf/
+
 ENV JAVA_PREFIX /usr/lib/jvm/java-9-openjdk-amd64
 #ENV VERBOSE_BUILD "--subcommands --verbose_failures"
 
 RUN cd /exaudf_src/ && \
-	bash build.sh --define r=true --define python=true --define java=true //:exaudfclient && \
+	bash build.sh -c opt --define r=true --define python=true --define java=true //:exaudfclient && \
 	cp -r -L bazel-bin/* /exaudf
