--- a/src/WORKSPACE
+++ b/src/WORKSPACE
@@ -3,10 +3,13 @@ python_local_repository(name = "python3")
 python_local_repository(name = "python2")
 
 load("//:python_repository.bzl", "numpy_local_repository")
-numpy_local_repository(name = "numpy_linux")
+numpy_local_repository(name = "numpy")
 
 load("//:java_repository.bzl", "java_local_repository")
 java_local_repository(name = "java")
+
+load("//:protobuf_repository.bzl", "protobuf_local_repository")
+protobuf_local_repository(name = "protobuf")
 
 new_local_repository(
     name = "R_linux",
