--- a/src/rcontainer/BUILD
+++ b/src/rcontainer/BUILD
@@ -46,18 +46,18 @@ genrule(
 
 cc_library(
     name = "exascript_r",
-    srcs = [":filter_swig_code_exascript_r_cc",":filter_swig_code_exascript_r_h"],
+    srcs = [":filter_swig_code_exascript_r_cc",":filter_swig_code_exascript_r_h","//exaudflib:header"],
     hdrs = [":filter_swig_code_exascript_r_h"],
     copts = ["-DENABLE_R_VM"],
-    deps = ["@R_linux//:r-lib","//exaudflib:exaudflib"]
+    deps = ["@R_linux//:r-lib","//exaudflib:exaudflib-deps"]
 )
 
 cc_library(
     name = "rcontainer",
-    srcs = ["rcontainer.cc"],
+    srcs = ["rcontainer.cc","//exaudflib:header"],
     copts = ["-DENABLE_R_VM"],
     include_prefix = ".",
     data = ["exascript_r_wrap.R", "exascript_r_preset.R"], #TODO do we need this, because build_integreted
     hdrs = ["filter_swig_code_exascript_r_h","exascript_r_int"],
-    deps = ["@R_linux//:r-lib","//exaudflib:exaudflib",":exascript_r", "//exaudflib:scriptoptionlines"]
+    deps = ["@R_linux//:r-lib",":exascript_r"]
 )
