--- a/flavors/fancyr-EXASOL-6.1.0/Dockerfile.base_fancyr-EXASOL-6.1.0
+++ b/flavors/fancyr-EXASOL-6.1.0/Dockerfile.base_fancyr-EXASOL-6.1.0
@@ -5,7 +5,8 @@ COPY ext/01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
 
 RUN apt-get -y update && \
     apt-get -y install software-properties-common && \
-    apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9 && \
+    gpg --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9 && \
+    gpg -a --export E298A3A825C0D65DFD57CBB651716619E084DAB9 | apt-key add -  && \
     add-apt-repository -y 'deb https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/' && \
     apt-get -y update && \
     DEBIAN_FRONTEND=noninteractive apt-get -y --allow-unauthenticated install \
