--- a/src/benchmark_container/BUILD
+++ b/src/benchmark_container/BUILD
@@ -2,8 +2,7 @@ package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "benchmark_container",
-    srcs = ["benchmark_container.cc","benchmark_container.h", "//:debug_message.h",
-            "//exaudflib:header"],
+    srcs = ["benchmark_container.cc","benchmark_container.h"],
     hdrs = ["benchmark_container.h"],
-    deps = ["//exaudflib:exaudflib-deps"]
+    deps = ["//exaudflib:exaudflib-deps","//exaudflib:header", "//:debug_message_h"]
 )
