--- a/src/javacontainer/BUILD
+++ b/src/javacontainer/BUILD
@@ -82,16 +82,21 @@ genrule(
 
 cc_library(
     name = "exascript_java",
-    srcs = [":filter_swig_code_exascript_java_cc","//exaudflib:header"],
-    deps = ["@java//:java","//exaudflib:exaudflib-deps"]
+    srcs = [":filter_swig_code_exascript_java_cc"],
+    deps = ["@java//:java","//exaudflib:exaudflib-deps","//exaudflib:header"],
+    copts = ["-O0"], 
+    # We limit this target to -O0 (no optimization). because otherwise we get compiler warnings of the sort 
+    # "dereferencing type-punned pointer will break strict-aliasing rules". Normally, this indicates that
+    # compiling with higher optimizations levels may break your progrom. Unitl now, we don't have enough tests
+    # to verify if higher levels of optimizations might work
 )
 
 cc_library(
     name = "javacontainer",
     srcs = [":javacontainer.cc", ":dummy"],
-    hdrs = [":exascript_java_int", ":filter_swig_code_exascript_java_h","exascript_java_jni_decl.h","//:debug_message.h","//exaudflib:header"],
+    hdrs = [":exascript_java_int", ":filter_swig_code_exascript_java_h","exascript_java_jni_decl.h"],
 #    data = [":exaudf-api", ":exaudf", "libexaudf-src.jar", "libexaudf-api-src.jar"],
-    deps = ["@ssl//:ssl","@java//:java", ":exascript_java"]
+    deps = ["@ssl//:ssl","@java//:java", ":exascript_java", "//exaudflib:header", "//:debug_message_h"]
 )
 
 #workaround to build jars together with javacontainer c++ library
