--- a/src/.env.template
+++ b/src/.env.template
@@ -6,3 +6,4 @@ export PYTHON3_VERSION=
 export PROTOBUF_BIN=
 export PROTOBUF_LIBRARY_PREFIX=
 export PROTOBUF_INCLUDE_PREFIX=
+export VERBOSE_BUILD= #"--subcommands --verbose_failures"
