--- a/src/python/python3/BUILD
+++ b/src/python/python3/BUILD
@@ -69,18 +69,18 @@ genrule(
 
 cc_library(
     name = "exascript_python",
-    srcs = [":filter_swig_code_exascript_python_cc",":filter_swig_code_exascript_python_h","//exaudflib:header"],
+    srcs = [":filter_swig_code_exascript_python_cc",":filter_swig_code_exascript_python_h"],
     hdrs = [":filter_swig_code_exascript_python_h"],
-    deps = ["@python3//:python3","//exaudflib:exaudflib-deps"]
+    deps = ["@python3//:python3","//exaudflib:exaudflib-deps","//exaudflib:header"]
 )
 
 cc_library(
     name = "pythoncontainer",
-    srcs = ["//python:pythoncontainer.cc","//:debug_message.h",":dummy.h","//exaudflib:header"],
+    srcs = ["//python:pythoncontainer.cc",":dummy.h"],
     data = [":extend_exascript_python_preset_py"], 
     hdrs = [":exascript_python_int", ":filter_swig_code_exascript_python_h"],
     include_prefix = ".",
-    deps = ["@python3//:python3",":exascript_python"]
+    deps = ["@python3//:python3",":exascript_python","//exaudflib:header", "//:debug_message_h"]
 )
 
 #workaround to build pyextdataframe.so together with pythoncontainer c++ library
@@ -94,7 +94,7 @@ genrule(
 cc_binary(
     name = "pyextdataframe.so",
     linkshared = 1,
-    srcs = ["//python:python_ext_dataframe.cc","//:debug_message.h",
-            "//exaudflib:header"],
-    deps = ["@python3//:python3","@numpy//:numpy","//exaudflib:exaudflib-deps"]
+    srcs = [":python_ext_dataframe.cc"],
+    deps = ["@python3//:python3","@numpy//:numpy","//exaudflib:exaudflib-deps",
+            "//exaudflib:header", "//:debug_message_h"]
 )
