--- a/src/streaming_container/BUILD
+++ b/src/streaming_container/BUILD
@@ -2,7 +2,7 @@ package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "streamingcontainer",
-    srcs = ["streamingcontainer.cc","streamingcontainer.h","//exaudflib:header"],
+    srcs = ["streamingcontainer.cc","streamingcontainer.h"],
     hdrs = ["streamingcontainer.h"],
-    deps = ["//exaudflib:exaudflib-deps"]
+    deps = ["//exaudflib:exaudflib-deps","//exaudflib:header"]
 )
