--- a/flavors/standard-EXASOL-6.1.0/Dockerfile.test_standard-EXASOL-6.1.0
+++ b/flavors/standard-EXASOL-6.1.0/Dockerfile.test_standard-EXASOL-6.1.0
@@ -3,9 +3,8 @@ FROM exaudf/release_standard-exasol-6.1.0
 RUN mkdir /exasol_emulator
 
 COPY emulator/ /exasol_emulator
-COPY src/zmqcontainer.proto /exasol_emulator
+COPY src/exaudflib/zmqcontainer.proto /exasol_emulator
 
-RUN     apt-get -y install python-protobuf python-zmq gdb valgrind
-
+RUN apt-get -y install python-protobuf python-zmq gdb valgrind
 RUN cd /exasol_emulator && protoc zmqcontainer.proto --python_out=.
 RUN ls /exasol_emulator
