add connecting of multiple docker pull or build tasks, high level tasks for flavors, better logging

--- a/build_utils/test/resources/test-flavor/udfclient-deps/Dockerfile
+++ b/build_utils/test/resources/test-flavor/udfclient-deps/Dockerfile
@@ -1,3 +1,30 @@
 FROM ubuntu:18.04
+ENV DEBIAN_FRONTEND=noninteractive
 
 COPY ext/01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
+
+RUN apt-get -y update && \
+    apt-get -y install \
+        coreutils \
+        locales \
+        libzmq3-dev \
+        protobuf-compiler \
+        libprotobuf-dev \
+        libssl-dev \
+        swig \
+        unzip \
+        libpcre3-dev \
+        curl \
+        libnss-db && \
+    locale-gen en_US.UTF-8 && \
+    update-locale LC_ALL=en_US.UTF-8 && \
+    apt-get -y clean && \
+    apt-get -y autoremove && \
+    ldconfig
+
+RUN addgroup --gid 1000 exasolution
+RUN adduser --disabled-login --uid 1000 --gid 1000 exasolution --gecos "First Last,RoomNumber,WorkPhone,HomePhone"
+
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US:en
+ENV LC_ALL en_US.UTF-8
