add release task and refactoring

--- a/build_utils/test/resources/test-flavor/build_deps/Dockerfile
+++ b/build_utils/test/resources/test-flavor/build_deps/Dockerfile
@@ -1,7 +1,8 @@
 FROM {{language_deps}}
 
 
-RUN apt-get install -y curl openjdk-8-jdk && \
+RUN apt-get -y update && \
+    apt-get install -y curl openjdk-8-jdk && \
 	echo "deb [arch=amd64] http://storage.googleapis.com/bazel-apt stable jdk1.8" | tee /etc/apt/sources.list.d/bazel.list && \
 	curl https://bazel.build/bazel-release.pub.gpg | apt-key add - && \
 	apt-get update && \
