Separate flavor-base-deps image from language-deps image and merge back in release image. build_context_hasher.py now uses only the hashes of the previous images and not the whole image name. Furthermore, some smaller fixes and cleaups.

--- a/build_utils/test/resources/test-flavor/flavor_base_deps/Dockerfile
+++ b/build_utils/test/resources/test-flavor/flavor_base_deps/Dockerfile
@@ -1,7 +1,13 @@
-FROM {{language_deps}}
+FROM ubuntu:18.04
+
+ENV DEBIAN_FRONTEND=noninteractive
+
+COPY ext/01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
 
 RUN apt-get -y update && \
     apt-get -y install \
+        curl \
+        locales \
         python-pip \
         python-lxml \
         python-cjson \
