--- a/build_utils/test/resources/test-flavor/flavor_test_build_run/Dockerfile
+++ b/build_utils/test/resources/test-flavor/flavor_test_build_run/Dockerfile
@@ -1,5 +1,7 @@
 FROM {{flavor_customization}}
 
+COPY --from={{base_test_build_run}} /usr /usr
+COPY --from={{base_test_build_run}} /opt /opt
 COPY --from={{base_test_build_run}} /exasol_emulator /exasol_emulator
 COPY --from={{base_test_build_run}} /exaudf /exaudf
 COPY --from={{base_test_build_run}} /exaudf_src /exaudf_src
