--- a/build_utils/test/resources/test-flavor/release/Dockerfile
+++ b/build_utils/test/resources/test-flavor/release/Dockerfile
@@ -1,5 +1,7 @@
 FROM ubuntu:18.04
 
+COPY --from={{build_run}} /usr /usr
+COPY --from={{build_run}} /opt /opt
 COPY --from={{flavor_customization}} /usr /usr
 COPY --from={{flavor_customization}} /opt /opt
 COPY --from={{build_run}} /exaudf /exaudf
