--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -16,10 +16,11 @@ RUN apt-get -y update && \
     apt-get -y autoremove && \
     ldconfig
 
-RUN mkdir -p downloads/ODBC downloads/JDBC downloads/EXAplus
+RUN mkdir -p downloads/ODBC downloads/JDBC downloads/EXAplus downloads/virtualschema-jdbc-adapter
 RUN curl -s https://www.exasol.com/support/secure/attachment/65437/EXASOL_ODBC-6.0.11.tar.gz | tar -C downloads/ODBC --strip-components 1 -zxf -
 RUN curl -s https://www.exasol.com/support/secure/attachment/60963/EXASOL_JDBC-6.0.8.tar.gz | tar -C downloads/JDBC --strip-components 1 -zxf -
 RUN curl -s https://www.exasol.com/support/secure/attachment/63966/EXAplus-6.0.10.tar.gz | tar -C downloads/EXAplus --strip-components 1 -zxf -
+COPY ext/virtualschema-jdbc-adapter.jar downloads/virtualschema-jdbc-adapter
 
 COPY tests tests
 RUN pip install -r "tests/requirements.txt"
