fix wait_for_finish of upload_file_to_db.py, fix dockerfiles for test_flavor and implement first version of test execution

--- a/build_utils/test/resources/test-flavor/build_run/Dockerfile
+++ b/build_utils/test/resources/test-flavor/build_run/Dockerfile
@@ -6,5 +6,5 @@ COPY src/ /exaudf_src/
 ENV VERBOSE_BUILD "--subcommands --verbose_failures"
 
 RUN cd /exaudf_src/ && \
-	bash build.sh -c opt --define benchmark=true //:exaudfclient && \
+	bash build.sh -c dbg --define python=true //:exaudfclient && \
 	cp -r -L bazel-bin/* /exaudf
