--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -4,6 +4,7 @@ COPY ext/01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
 
 RUN apt-get -y update && \
     apt-get -y install \
+        openjdk-11-jdk \
         locales \
         python \
         python-pip \
@@ -22,5 +23,5 @@ RUN curl -s https://www.exasol.com/support/secure/attachment/60963/EXASOL_JDBC-6
 RUN curl -s https://www.exasol.com/support/secure/attachment/63966/EXAplus-6.0.10.tar.gz | tar -C downloads/EXAplus --strip-components 1 -zxf -
 COPY ext/virtualschema-jdbc-adapter.jar downloads/virtualschema-jdbc-adapter
 
-COPY tests tests
+COPY tests /tests
 RUN pip install -r "tests/requirements.txt"
