--- a/build_utils/test/resources/test-flavor/build_deps/Dockerfile
+++ b/build_utils/test/resources/test-flavor/build_deps/Dockerfile
@@ -2,11 +2,15 @@ FROM {{language_deps}}
 
 
 RUN apt-get -y update && \
-    apt-get install -y curl openjdk-8-jdk && \
+    apt-get install -y curl openjdk-8-jdk wget tar build-essential && \
 	echo "deb [arch=amd64] http://storage.googleapis.com/bazel-apt stable jdk1.8" | tee /etc/apt/sources.list.d/bazel.list && \
 	curl https://bazel.build/bazel-release.pub.gpg | apt-key add - && \
 	apt-get update && \
 	apt-get install -y bazel && \
+	wget prdownloads.sourceforge.net/swig/swig-2.0.4.tar.gz && \
+    tar zxf swig-2.0.4.tar.gz && \
+    (cd swig-2.0.4 && ./configure --prefix=/usr && make && make install) && \
+    rm -rf swig-2.0.4 swig-2.0.4.tar.gz && \
 	locale-gen en_US.UTF-8 && \
     update-locale LC_ALL=en_US.UTF-8 && \
     apt-get -y clean && \
