extract run_db_tests_in_test_config.py, run_db_test_in_directory.py and run_db_test.py from test_runner_db_test_task.py, implement populate_data.py, make uploaded release container reusable, fix merge of docker images in release-Dockerfile, such that all numpy test failures are solved, update travis to execute test.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ before_script:
   - export PYTHONPATH=$PYTHONPATH:$(pwd)
 
 script:
-  - pipenv run python3 build.py
+  - pipenv run python3 test.py
 
