--- a/build_utils/test/resources/test-flavor/flavor_base_deps/Dockerfile
+++ b/build_utils/test/resources/test-flavor/flavor_base_deps/Dockerfile
@@ -2,6 +2,9 @@ FROM ubuntu:18.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 
+ENV ARCHIVE_UBUNTU_PREFIX=de.
+RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1$ARCHIVE_UBUNTU_PREFIX\2/" /etc/apt/sources.list
+
 COPY ext/01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
 
 RUN apt-get -y update && \
@@ -11,6 +14,7 @@ RUN apt-get -y update && \
         python-pip \
         python-lxml \
         python-cjson \
+        python-numpy \
         python-pandas \
         python-requests && \
 	locale-gen en_US.UTF-8 && \
