Improved logging for travis builds * log command outputs to console for travis * add still running notification to logging to counteract travis stall build detection

--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,5 @@ jinja2 = "*"
 humanfriendly = "*"
 jsonpickle = "*"
 simplejson = "*"
-docker = ">=3.7.1"
-ipaddr = ">=2.1.11"
-configobj = ">=5.0.6"
+docker = "*"
 netaddr = "*"
