--- a/build_utils/test/resources/test-flavor/base_test_build_run/Dockerfile
+++ b/build_utils/test/resources/test-flavor/base_test_build_run/Dockerfile
@@ -3,10 +3,10 @@ FROM {{base_test_deps}}
 RUN mkdir /exaudf_src /exaudf
 COPY src/ /exaudf_src/
 
-ENV VERBOSE_BUILD "--subcommands --verbose_failures"
+#ENV VERBOSE_BUILD "--subcommands --verbose_failures"
 
 RUN cd /exaudf_src/ && \
-	bash build.sh -c dbg --define benchmark=true //:exaudfclient && \
+	bash build.sh -c dbg --define python=true //:exaudfclient && \
 	cp -r -L bazel-bin/* /exaudf
 
 RUN mkdir /exasol_emulator
