--- a/build_utils/test/resources/test-flavor/build_run/Dockerfile
+++ b/build_utils/test/resources/test-flavor/build_run/Dockerfile
@@ -3,7 +3,7 @@ FROM {{build_deps}}
 RUN mkdir /exaudf_src /exaudf
 COPY src/ /exaudf_src/
 
-ENV VERBOSE_BUILD "--subcommands --verbose_failures"
+#ENV VERBOSE_BUILD "--subcommands --verbose_failures"
 
 RUN cd /exaudf_src/ && \
 	bash build.sh -c dbg --define python=true //:exaudfclient && \
