allow files and directories for build context of images, fix problem with environment of tests/test/python/unicode.py, add test_files parameter to test runner, add reuse to populate_data.py and all uploads

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -22,9 +22,8 @@ RUN curl -s https://www.exasol.com/support/secure/attachment/65437/EXASOL_ODBC-6
 RUN curl -s https://www.exasol.com/support/secure/attachment/60963/EXASOL_JDBC-6.0.8.tar.gz | tar -C downloads/JDBC --strip-components 1 -zxf -
 RUN curl -s https://www.exasol.com/support/secure/attachment/63966/EXAplus-6.0.10.tar.gz | tar -C downloads/EXAplus --strip-components 1 -zxf -
 COPY ext/virtualschema-jdbc-adapter.jar downloads/virtualschema-jdbc-adapter
-
-COPY tests /tests
-
-RUN pip install -r "/tests/requirements.txt"
-
 ENV EXAPLUS=/downloads/EXAplus/exaplus
+RUN curl -s -o udf_debug.py https://raw.githubusercontent.com/exasol/hadoop-etl-udfs/master/tools/udf_debug.py
+
+COPY requirements.txt requirements.txt
+RUN pip install -r "requirements.txt"
