fix travis build issues by explicit define the data dependency (releases directory) between SpawnTestEnvironment and ExportContainerTask without prohibiting their parallel execution. Such as several other smaller fixes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ before_script:
   - export PYTHONPATH=$PYTHONPATH:$(pwd)
 
 script:
-  - pipenv run python3 build_utils/cli.py run-db-test --flavor-path build_utils/test/resources/test-flavor/ --workers 3
+  - pipenv run python3 build_utils/cli.py run-db-test --flavor-path build_utils/test/resources/test-flavor/ --release-type Release --workers 5
 
